--- a/.github/workflows/docusaurus.yml
+++ b/.github/workflows/docusaurus.yml
@@ -11,27 +11,15 @@ jobs:
                     persist-credentials: false
                     fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
 
-            -   uses: actions/setup-node@v2
-                with:
-                    node-version: '14'
-
-            -   name: Cache pnpm modules
-                uses: actions/cache@v2
-                id: cached-deps
-                env:
-                    cache-name: cache-node-modules
-                with:
-                    path: ~/.pnpm-store
-                    key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
-                    restore-keys: |
-                        ${{ runner.os }}-build-${{ env.cache-name }}-
-                        ${{ runner.os }}-build-
-                        ${{ runner.os }}-
-
             -   uses: pnpm/action-setup@v2.1.0
                 with:
                     version: latest
                     run_install: false
+
+            -   uses: actions/setup-node@v2
+                with:
+                    node-version: '14'
+                    cache: 'pnpm'
 
             -   name: Install dependencies
                 run: |
