chore: clean up scripts

--- a/package.json
+++ b/package.json
@@ -10,11 +10,7 @@
     "release": "dotenv release-it --",
     "storybook": "nx storybook soba",
     "build": "nx run-many --target=build --projects=core,cannon,postprocessing,soba,schematics",
-    "publish": "nx run-many --target=publish --all --parallel",
-    "**-predocs-**": "test \"$CI\" = true && npx pnpm --filter \".\" --filter \"./libs/documentations\" install --no-frozen-lockfile --store=node_modules/.pnpm-store || echo skiping pnpm install",
-    "**-docs-**": "npx pnpm run predocs && nx build-docs documentations",
-    "predocs": "cd libs/documentations && npm install",
-    "docs": "nx build-docs documentations"
+    "publish": "nx run-many --target=publish --all --parallel"
   },
   "private": true,
   "dependencies": {
