--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular-eslint/eslint-plugin-template": "~13.2.1",
     "@angular-eslint/template-parser": "~13.2.1",
     "@angular/animations": "13.3.5",
+    "@angular/cdk": "13.3.6",
     "@angular/cli": "13.3.4",
     "@angular/common": "13.3.5",
     "@angular/compiler": "13.3.5",
