feat(soba); add materials, shaders; move materials to materials; soba materials to shaders

--- a/libs/soba/project.json
+++ b/libs/soba/project.json
@@ -48,7 +48,11 @@
           "libs/soba/staging/**/*.ts",
           "libs/soba/staging/**/*.html",
           "libs/soba/abstractions/**/*.ts",
-          "libs/soba/abstractions/**/*.html"
+          "libs/soba/abstractions/**/*.html",
+          "libs/soba/shaders/**/*.ts",
+          "libs/soba/shaders/**/*.html",
+          "libs/soba/materials/**/*.ts",
+          "libs/soba/materials/**/*.html"
         ]
       }
     },
