--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -42,8 +42,10 @@
       "@angular-three/soba/cameras": ["libs/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["libs/soba/loaders/src/index.ts"],
+      "@angular-three/soba/materials": ["libs/soba/materials/src/index.ts"],
       "@angular-three/soba/misc": ["libs/soba/misc/src/index.ts"],
       "@angular-three/soba/performances": ["libs/soba/performances/src/index.ts"],
+      "@angular-three/soba/shaders": ["libs/soba/shaders/src/index.ts"],
       "@angular-three/soba/staging": ["libs/soba/staging/src/index.ts"]
     }
   },
