--- a/package.json
+++ b/package.json
@@ -30,17 +30,6 @@
     "@angular/platform-browser": "13.3.6",
     "@angular/platform-browser-dynamic": "13.3.6",
     "@angular/router": "13.3.6",
-    "@nrwl/angular": "14.1.4",
-    "@nrwl/cli": "14.1.4",
-    "@nrwl/devkit": "14.1.4",
-    "@nrwl/eslint-plugin-nx": "14.1.4",
-    "@nrwl/jest": "14.1.4",
-    "@nrwl/js": "14.1.4",
-    "@nrwl/linter": "14.1.4",
-    "@nrwl/nx-cloud": "14.0.3",
-    "@nrwl/nx-plugin": "14.1.4",
-    "@nrwl/storybook": "14.1.4",
-    "@nrwl/workspace": "14.1.4",
     "@pmndrs/cannon-worker-api": "~2.1.0",
     "@release-it/bumper": "4.0.0",
     "@release-it/conventional-changelog": "5.0.0",
@@ -69,7 +58,6 @@
     "jest-preset-angular": "11.1.2",
     "ng-packagr": "13.3.1",
     "nice-color-palettes": "3.0.0",
-    "nx": "14.1.4",
     "postcss": "~8.4.13",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -86,10 +74,23 @@
     "typescript": "4.6.4",
     "zone.js": "~0.11.5"
   },
+  "devDependencies": {
+    "@nrwl/angular": "14.1.4",
+    "@nrwl/cli": "14.1.4",
+    "@nrwl/devkit": "14.1.4",
+    "@nrwl/eslint-plugin-nx": "14.1.4",
+    "@nrwl/jest": "14.1.4",
+    "@nrwl/js": "14.1.4",
+    "@nrwl/linter": "14.1.4",
+    "@nrwl/nx-cloud": "14.0.3",
+    "@nrwl/nx-plugin": "14.1.4",
+    "@nrwl/storybook": "14.1.4",
+    "@nrwl/workspace": "14.1.4",
+    "nx": "14.1.4"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-customizable"
     }
   }
 }
-
