--- a/package.json
+++ b/package.json
@@ -59,9 +59,9 @@
     "ng-packagr": "13.3.1",
     "nice-color-palettes": "3.0.0",
     "postcss": "~8.4.13",
-    "postcss-import": "~14.1.0",
+    "postcss-import": "14.1.0",
     "postcss-preset-env": "~7.5.0",
-    "postcss-url": "~10.1.3",
+    "postcss-url": "10.1.3",
     "postprocessing": "~6.26.4",
     "prettier": "^2.6.2",
     "release-it": "15.0.0",
@@ -75,18 +75,18 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@nrwl/angular": "14.1.4",
-    "@nrwl/cli": "14.1.4",
-    "@nrwl/devkit": "14.1.4",
-    "@nrwl/eslint-plugin-nx": "14.1.4",
-    "@nrwl/jest": "14.1.4",
-    "@nrwl/js": "14.1.4",
-    "@nrwl/linter": "14.1.4",
-    "@nrwl/nx-cloud": "14.0.3",
-    "@nrwl/nx-plugin": "14.1.4",
-    "@nrwl/storybook": "14.1.4",
-    "@nrwl/workspace": "14.1.4",
-    "nx": "14.1.4"
+    "@nrwl/angular": "14.1.9",
+    "@nrwl/cli": "14.1.9",
+    "@nrwl/devkit": "14.1.9",
+    "@nrwl/eslint-plugin-nx": "14.1.9",
+    "@nrwl/jest": "14.1.9",
+    "@nrwl/js": "14.1.9",
+    "@nrwl/linter": "14.1.9",
+    "@nrwl/nx-cloud": "14.0.5",
+    "@nrwl/nx-plugin": "14.1.9",
+    "@nrwl/storybook": "14.1.9",
+    "@nrwl/workspace": "14.1.9",
+    "nx": "14.1.9"
   },
   "config": {
     "commitizen": {
@@ -94,3 +94,4 @@
     }
   }
 }
+
