--- a/apps/schematics-e2e/project.json
+++ b/apps/schematics-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/schematics-e2e/src",
   "targets": {
@@ -11,5 +12,7 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["schematics"]
+  "implicitDependencies": [
+    "schematics"
+  ]
 }
