--- a/libs/documentations/project.json
+++ b/libs/documentations/project.json
@@ -1,10 +1,13 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/documentations",
   "projectType": "library",
   "targets": {
     "build-external-docs": {
       "executor": "@nrwl/workspace:run-commands",
-      "outputs": ["libs/documentations/build"],
+      "outputs": [
+        "libs/documentations/build"
+      ],
       "options": {
         "commands": [
           "NX_CLOUD=true STORYBOOK_BASE_HREF=soba/ npx nx build-storybook soba",
@@ -21,5 +24,7 @@
       ]
     }
   },
-  "tags": ["documentations"]
+  "tags": [
+    "documentations"
+  ]
 }
