--- a/libs/schematics/project.json
+++ b/libs/schematics/project.json
@@ -1,17 +1,24 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/schematics/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/schematics/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/schematics/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/schematics"],
+      "outputs": [
+        "coverage/libs/schematics"
+      ],
       "options": {
         "jestConfig": "libs/schematics/jest.config.ts",
         "passWithNoTests": true
@@ -19,7 +26,9 @@
     },
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/schematics",
         "tsConfig": "libs/schematics/tsconfig.lib.json",
@@ -58,5 +67,7 @@
       }
     }
   },
-  "tags": ["scope:schematics"]
+  "tags": [
+    "scope:schematics"
+  ]
 }
