--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "postinstall": "ngcc --properties es2015 browser module main",
+    "postinstall": "ngcc --properties es2020 browser module main",
     "commit": "git-cz",
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "13.3.7",
-    "@angular-eslint/eslint-plugin": "~13.2.1",
-    "@angular-eslint/eslint-plugin-template": "~13.2.1",
-    "@angular-eslint/template-parser": "~13.2.1",
-    "@angular/animations": "13.3.10",
-    "@angular/cdk": "13.3.8",
-    "@angular/cli": "13.3.7",
-    "@angular/common": "13.3.10",
-    "@angular/compiler": "13.3.10",
-    "@angular/compiler-cli": "13.3.10",
-    "@angular/core": "13.3.10",
-    "@angular/forms": "13.3.10",
-    "@angular/language-service": "13.3.10",
-    "@angular/platform-browser": "13.3.10",
-    "@angular/platform-browser-dynamic": "13.3.10",
-    "@angular/router": "13.3.10",
+    "@angular-devkit/build-angular": "14.0.0",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/animations": "14.0.0",
+    "@angular/cdk": "14.0.1",
+    "@angular/cli": "~14.0.0",
+    "@angular/common": "14.0.0",
+    "@angular/compiler": "14.0.0",
+    "@angular/compiler-cli": "14.0.0",
+    "@angular/core": "14.0.0",
+    "@angular/forms": "14.0.0",
+    "@angular/language-service": "14.0.0",
+    "@angular/platform-browser": "14.0.0",
+    "@angular/platform-browser-dynamic": "14.0.0",
+    "@angular/router": "14.0.0",
     "@pmndrs/cannon-worker-api": "~2.1.0",
     "@release-it/bumper": "4.0.0",
     "@release-it/conventional-changelog": "5.0.0",
-    "@storybook/addon-essentials": "~6.4.22",
+    "@storybook/addon-essentials": "6.5.7",
     "@storybook/addons": "~6.4.22",
-    "@storybook/angular": "~6.4.22",
-    "@storybook/builder-webpack5": "~6.4.22",
-    "@storybook/core-server": "6.4.22",
-    "@storybook/manager-webpack5": "~6.4.22",
+    "@storybook/angular": "6.5.7",
+    "@storybook/builder-webpack5": "6.5.7",
+    "@storybook/core-server": "6.5.7",
+    "@storybook/manager-webpack5": "6.5.7",
     "@storybook/theming": "~6.4.22",
     "@types/jest": "27.5.1",
     "@types/node": "16.11.7",
     "@types/three": "0.140.0",
-    "@typescript-eslint/eslint-plugin": "5.26.0",
-    "@typescript-eslint/parser": "5.26.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "all-contributors-cli": "~6.20.0",
     "cannon-es": "~0.19.0",
     "cannon-es-debugger": "~1.0.0",
@@ -52,18 +52,18 @@
     "csstype": "3.1.0",
     "cz-customizable": "~6.3.0",
     "dotenv-cli": "5.1.0",
-    "eslint": "8.16.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
     "jest-preset-angular": "11.1.2",
-    "ng-packagr": "13.3.1",
+    "ng-packagr": "14.0.0",
     "nice-color-palettes": "3.0.0",
     "postcss": "~8.4.14",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "~7.6.0",
     "postcss-url": "10.1.3",
     "postprocessing": "~6.26.4",
-    "prettier": "^2.6.2",
+    "prettier": "2.6.2",
     "release-it": "15.0.0",
     "rxjs": "~7.5.5",
     "three": "0.141.0",
@@ -71,22 +71,22 @@
     "troika-three-text": "~0.46.4",
     "ts-jest": "27.1.4",
     "tslib": "^2.4.0",
-    "typescript": "4.6.4",
+    "typescript": "4.7.3",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@nrwl/angular": "14.1.9",
-    "@nrwl/cli": "14.1.9",
-    "@nrwl/devkit": "14.1.9",
-    "@nrwl/eslint-plugin-nx": "14.1.9",
-    "@nrwl/jest": "14.1.9",
-    "@nrwl/js": "14.1.9",
-    "@nrwl/linter": "14.1.9",
-    "@nrwl/nx-cloud": "14.0.5",
-    "@nrwl/nx-plugin": "14.1.9",
-    "@nrwl/storybook": "14.1.9",
-    "@nrwl/workspace": "14.1.9",
-    "nx": "14.1.9"
+    "@nrwl/angular": "14.2.2",
+    "@nrwl/cli": "14.2.2",
+    "@nrwl/devkit": "14.2.2",
+    "@nrwl/eslint-plugin-nx": "14.2.2",
+    "@nrwl/jest": "14.2.2",
+    "@nrwl/js": "14.2.2",
+    "@nrwl/linter": "14.2.2",
+    "@nrwl/nx-cloud": "14.0.8",
+    "@nrwl/nx-plugin": "14.2.2",
+    "@nrwl/storybook": "14.2.2",
+    "@nrwl/workspace": "14.2.2",
+    "nx": "14.2.2"
   },
   "config": {
     "commitizen": {
@@ -94,4 +94,3 @@
     }
   }
 }
-
