--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "14.0.0",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
     "@angular/animations": "14.0.0",
     "@angular/cdk": "14.0.1",
     "@angular/cli": "~14.0.0",
@@ -31,62 +27,66 @@
     "@angular/platform-browser-dynamic": "14.0.0",
     "@angular/router": "14.0.0",
     "@pmndrs/cannon-worker-api": "~2.1.0",
-    "@release-it/bumper": "4.0.0",
-    "@release-it/conventional-changelog": "5.0.0",
-    "@storybook/addon-essentials": "6.5.7",
-    "@storybook/addons": "~6.5.7",
-    "@storybook/angular": "6.5.7",
-    "@storybook/builder-webpack5": "6.5.7",
-    "@storybook/core-server": "6.5.7",
-    "@storybook/manager-webpack5": "6.5.7",
-    "@storybook/theming": "~6.5.7",
-    "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
-    "@types/three": "0.141.0",
-    "@typescript-eslint/eslint-plugin": "5.27.1",
-    "@typescript-eslint/parser": "5.27.1",
-    "all-contributors-cli": "~6.20.0",
     "cannon-es": "~0.19.0",
     "cannon-es-debugger": "~1.0.0",
-    "commitizen": "4.2.4",
-    "csstype": "3.1.0",
-    "cz-customizable": "~6.3.0",
-    "dotenv-cli": "5.1.0",
-    "eslint": "8.17.0",
-    "eslint-config-prettier": "8.5.0",
-    "jest": "28.1.1",
-    "jest-preset-angular": "12.1.0",
-    "ng-packagr": "14.0.0",
     "nice-color-palettes": "3.0.0",
-    "postcss": "~8.4.14",
-    "postcss-import": "14.1.0",
-    "postcss-preset-env": "~7.7.1",
-    "postcss-url": "10.1.3",
-    "postprocessing": "~6.27.0",
-    "prettier": "2.6.2",
-    "release-it": "15.0.0",
     "rxjs": "~7.5.5",
     "three": "0.141.0",
     "three-stdlib": "~2.10.2",
     "troika-three-text": "~0.46.4",
-    "ts-jest": "28.0.4",
     "tslib": "^2.4.0",
-    "typescript": "4.7.3",
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@nrwl/angular": "14.2.2",
-    "@nrwl/cli": "14.2.2",
-    "@nrwl/devkit": "14.2.2",
-    "@nrwl/eslint-plugin-nx": "14.2.2",
-    "@nrwl/jest": "14.2.2",
-    "@nrwl/js": "14.2.2",
-    "@nrwl/linter": "14.2.2",
-    "@nrwl/nx-cloud": "14.0.8",
-    "@nrwl/nx-plugin": "14.2.2",
-    "@nrwl/storybook": "14.2.2",
-    "@nrwl/workspace": "14.2.2",
-    "nx": "14.2.2"
+      "@angular-devkit/build-angular": "14.0.0",
+      "@angular-eslint/eslint-plugin": "13.2.1",
+      "@angular-eslint/eslint-plugin-template": "13.2.1",
+      "@angular-eslint/template-parser": "13.2.1",
+      "@nrwl/angular": "14.2.2",
+      "@nrwl/cli": "14.2.2",
+      "@nrwl/devkit": "14.2.2",
+      "@nrwl/eslint-plugin-nx": "14.2.2",
+      "@nrwl/jest": "14.2.2",
+      "@nrwl/js": "14.2.2",
+      "@nrwl/linter": "14.2.2",
+      "@nrwl/nx-cloud": "14.0.8",
+      "@nrwl/nx-plugin": "14.2.2",
+      "@nrwl/storybook": "14.2.2",
+      "@nrwl/workspace": "14.2.2",
+      "@release-it/bumper": "4.0.0",
+      "@release-it/conventional-changelog": "5.0.0",
+      "@storybook/addon-essentials": "6.5.7",
+      "@storybook/addons": "~6.5.7",
+      "@storybook/angular": "6.5.7",
+      "@storybook/builder-webpack5": "6.5.7",
+      "@storybook/core-server": "6.5.7",
+      "@storybook/manager-webpack5": "6.5.7",
+      "@storybook/theming": "~6.5.7",
+      "@types/jest": "28.1.1",
+      "@types/node": "16.11.7",
+      "@types/three": "0.141.0",
+      "@typescript-eslint/eslint-plugin": "5.27.1",
+      "@typescript-eslint/parser": "5.27.1",
+      "all-contributors-cli": "~6.20.0",
+      "commitizen": "4.2.4",
+      "csstype": "3.1.0",
+      "cz-customizable": "~6.3.0",
+      "dotenv-cli": "5.1.0",
+      "eslint": "8.17.0",
+      "eslint-config-prettier": "8.5.0",
+      "jest": "28.1.1",
+      "jest-preset-angular": "12.1.0",
+      "ng-packagr": "14.0.0",
+    "nx": "14.2.2",
+      "postcss": "~8.4.14",
+      "postcss-import": "14.1.0",
+      "postcss-preset-env": "~7.7.1",
+      "postcss-url": "10.1.3",
+      "postprocessing": "~6.27.0",
+      "prettier": "2.6.2",
+      "release-it": "15.0.0",
+      "ts-jest": "28.0.4",
+      "typescript": "4.7.3"
   },
   "config": {
     "commitizen": {
