--- a/package.json
+++ b/package.json
@@ -38,55 +38,57 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-      "@angular-devkit/build-angular": "14.0.0",
-      "@angular-eslint/eslint-plugin": "13.2.1",
-      "@angular-eslint/eslint-plugin-template": "13.2.1",
-      "@angular-eslint/template-parser": "13.2.1",
-      "@nrwl/angular": "14.2.2",
-      "@nrwl/cli": "14.2.2",
-      "@nrwl/devkit": "14.2.2",
-      "@nrwl/eslint-plugin-nx": "14.2.2",
-      "@nrwl/jest": "14.2.2",
-      "@nrwl/js": "14.2.2",
-      "@nrwl/linter": "14.2.2",
-      "@nrwl/nx-cloud": "14.0.8",
-      "@nrwl/nx-plugin": "14.2.2",
-      "@nrwl/storybook": "14.2.2",
-      "@nrwl/workspace": "14.2.2",
-      "@release-it/bumper": "4.0.0",
-      "@release-it/conventional-changelog": "5.0.0",
-      "@storybook/addon-essentials": "6.5.7",
-      "@storybook/addons": "~6.5.7",
-      "@storybook/angular": "6.5.7",
-      "@storybook/builder-webpack5": "6.5.7",
-      "@storybook/core-server": "6.5.7",
-      "@storybook/manager-webpack5": "6.5.7",
-      "@storybook/theming": "~6.5.7",
-      "@types/jest": "28.1.1",
-      "@types/node": "16.11.7",
-      "@types/three": "0.141.0",
-      "@typescript-eslint/eslint-plugin": "5.27.1",
-      "@typescript-eslint/parser": "5.27.1",
-      "all-contributors-cli": "~6.20.0",
-      "commitizen": "4.2.4",
-      "csstype": "3.1.0",
-      "cz-customizable": "~6.3.0",
-      "dotenv-cli": "5.1.0",
-      "eslint": "8.17.0",
-      "eslint-config-prettier": "8.5.0",
-      "jest": "28.1.1",
-      "jest-preset-angular": "12.1.0",
-      "ng-packagr": "14.0.0",
-    "nx": "14.2.2",
-      "postcss": "~8.4.14",
-      "postcss-import": "14.1.0",
-      "postcss-preset-env": "~7.7.1",
-      "postcss-url": "10.1.3",
-      "postprocessing": "~6.27.0",
-      "prettier": "2.6.2",
-      "release-it": "15.0.0",
-      "ts-jest": "28.0.4",
-      "typescript": "4.7.3"
+    "@angular-devkit/build-angular": "14.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.2",
+    "@angular-eslint/eslint-plugin-template": "14.0.2",
+    "@angular-eslint/template-parser": "14.0.2",
+    "@nrwl/angular": "14.4.3",
+    "@nrwl/cli": "14.4.3",
+    "@nrwl/devkit": "14.4.3",
+    "@nrwl/eslint-plugin-nx": "14.4.3",
+    "@nrwl/jest": "14.4.3",
+    "@nrwl/js": "14.4.3",
+    "@nrwl/linter": "14.4.3",
+    "@nrwl/nx-cloud": "14.2.0",
+    "@nrwl/nx-plugin": "14.4.3",
+    "@nrwl/storybook": "14.4.3",
+    "@nrwl/workspace": "14.4.3",
+    "@release-it/bumper": "4.0.0",
+    "@release-it/conventional-changelog": "5.0.0",
+    "@storybook/addon-essentials": "6.5.9",
+    "@storybook/addons": "~6.5.7",
+    "@storybook/angular": "6.5.9",
+    "@storybook/builder-webpack5": "6.5.9",
+    "@storybook/core-server": "6.5.9",
+    "@storybook/manager-webpack5": "6.5.9",
+    "@storybook/theming": "~6.5.7",
+    "@swc-node/register": "^1.4.2",
+    "@swc/core": "^1.2.173",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@types/three": "0.141.0",
+    "@typescript-eslint/eslint-plugin": "5.30.7",
+    "@typescript-eslint/parser": "5.30.7",
+    "all-contributors-cli": "~6.20.0",
+    "commitizen": "4.2.4",
+    "csstype": "3.1.0",
+    "cz-customizable": "~6.3.0",
+    "dotenv-cli": "5.1.0",
+    "eslint": "8.17.0",
+    "eslint-config-prettier": "8.5.0",
+    "jest": "28.1.1",
+    "jest-preset-angular": "12.1.0",
+    "ng-packagr": "14.0.0",
+    "nx": "14.4.3",
+    "postcss": "~8.4.14",
+    "postcss-import": "14.1.0",
+    "postcss-preset-env": "~7.7.1",
+    "postcss-url": "10.1.3",
+    "postprocessing": "~6.27.0",
+    "prettier": "2.6.2",
+    "release-it": "15.0.0",
+    "ts-jest": "28.0.4",
+    "typescript": "4.7.3"
   },
   "config": {
     "commitizen": {
