--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -5,9 +5,9 @@
     "access": "public"
   },
   "peerDependencies": {
-    "@angular/common": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "three": "~0.140.0 || ~0.141.0"
+    "@angular/common": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "three": "~0.141.0 | ~0.142.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
