ci: push to another branch again

--- a/.github/workflows/docusaurus-branch.yml
+++ b/.github/workflows/docusaurus-branch.yml
@@ -44,6 +44,6 @@ jobs:
                 uses: ad-m/github-push-action@master
                 with:
                     github_token: ${{ secrets.GITHUB_TOKEN }}
-                    branch: deploy/${{ github.ref }}
+                    branch: ${{ github.ref }}-deploy
                     force: true
                     directory: libs/documentations/build
