--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -7,7 +7,7 @@
   "peerDependencies": {
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
-    "three": "~0.141.0 | ~0.142.0"
+    "three": "~0.141.0 || ~0.142.0"
   },
   "dependencies": {
     "tslib": "^2.0.0"
