--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@angular/animations": "14.1.0",
     "@angular/cdk": "14.1.0",
-    "@angular/cli": "~14.1.0",
+    "@angular/cli": "14.1.0",
     "@angular/common": "14.1.0",
     "@angular/compiler": "14.1.0",
     "@angular/compiler-cli": "14.1.0",
@@ -43,17 +43,17 @@
     "@angular-eslint/eslint-plugin-template": "14.0.2",
     "@angular-eslint/template-parser": "14.0.2",
     "@mdx-js/react": "2.1.2",
-    "@nrwl/angular": "14.4.3",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/devkit": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/js": "14.4.3",
-    "@nrwl/linter": "14.4.3",
+    "@nrwl/angular": "14.5.1",
+    "@nrwl/cli": "14.5.1",
+    "@nrwl/devkit": "14.5.1",
+    "@nrwl/eslint-plugin-nx": "14.5.1",
+    "@nrwl/jest": "14.5.1",
+    "@nrwl/js": "14.5.1",
+    "@nrwl/linter": "14.5.1",
     "@nrwl/nx-cloud": "14.2.0",
-    "@nrwl/nx-plugin": "14.4.3",
-    "@nrwl/storybook": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
+    "@nrwl/nx-plugin": "14.5.1",
+    "@nrwl/storybook": "14.5.1",
+    "@nrwl/workspace": "14.5.1",
     "@release-it/bumper": "4.0.0",
     "@release-it/conventional-changelog": "5.0.0",
     "@storybook/addon-essentials": "6.5.9",
@@ -80,7 +80,7 @@
     "jest": "28.1.3",
     "jest-preset-angular": "12.2.0",
     "ng-packagr": "14.1.0",
-    "nx": "14.4.3",
+    "nx": "14.5.1",
     "postcss": "~8.4.14",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "~7.7.2",
@@ -97,3 +97,4 @@
     }
   }
 }
+
