chore: prep new

--- a/old/apps/sandbox/tsconfig.app.json
+++ b/old/apps/sandbox/tsconfig.app.json
@@ -5,7 +5,8 @@
     "types": [],
     "target": "es2020"
   },
-  "files": ["src/main.ts", "src/polyfills.ts"],
+  "files": [
+    "src/main.ts", "src/polyfills.ts"],
   "include": ["src/**/*.d.ts"],
   "exclude": ["**/*.test.ts", "**/*.spec.ts"]
 }
