--- a/old/apps/sandbox/project.json
+++ b/old/apps/sandbox/project.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/sandbox/src",
+  "sourceRoot": "src",
   "prefix": "sandbox",
   "targets": {
     "build": {
