--- a/old/apps/schematics-e2e/project.json
+++ b/old/apps/schematics-e2e/project.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "sourceRoot": "apps/schematics-e2e/src",
+  "sourceRoot": "../schematics-e2e/src",
   "targets": {
     "e2e": {
       "executor": "@nrwl/nx-plugin:e2e",
