--- a/old/libs/cannon/project.json
+++ b/old/libs/cannon/project.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
-  "sourceRoot": "libs/cannon/src",
+  "sourceRoot": "src",
   "prefix": "ngt",
   "targets": {
     "build": {
