--- a/old/libs/cannon/tsconfig.lib.json
+++ b/old/libs/cannon/tsconfig.lib.json
@@ -8,6 +8,7 @@
     "allowJs": true,
     "types": []
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
+  "exclude": [
+    "src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
