--- a/old/libs/core/tsconfig.lib.json
+++ b/old/libs/core/tsconfig.lib.json
@@ -7,6 +7,7 @@
     "inlineSources": true,
     "types": []
   },
-  "exclude": ["src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
+  "exclude": [
+    "src/test-setup.ts", "**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
   "include": ["**/*.ts"]
 }
