--- a/old/libs/documentations/project.json
+++ b/old/libs/documentations/project.json
@@ -1,6 +1,6 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/documentations",
+  "sourceRoot": "",
   "projectType": "library",
   "targets": {
     "build-external-docs": {
