--- a/old/libs/schematics/tsconfig.lib.json
+++ b/old/libs/schematics/tsconfig.lib.json
@@ -6,6 +6,8 @@
     "declaration": true,
     "types": ["node"]
   },
-  "exclude": ["**/*.spec.ts", "**/*.test.ts", "jest.config.ts"],
+  "exclude": ["**/*.spec.ts", "**/*.test.ts",
+    "jest.config.ts"
+  ],
   "include": ["**/*.ts"]
 }
