--- a/old/libs/soba/tsconfig.lib.prod.json
+++ b/old/libs/soba/tsconfig.lib.prod.json
@@ -6,5 +6,7 @@
   "angularCompilerOptions": {
     "compilationMode": "partial"
   },
-  "exclude": ["jest.config.ts"]
+  "exclude": [
+    "jest.config.ts"
+  ]
 }
