--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "nx": "15.0.0-beta.1",
+    "@nrwl/angular": "15.0.0-beta.1",
     "@nrwl/cli": "15.0.0-beta.1",
     "@nrwl/workspace": "15.0.0-beta.1",
-    "typescript": "~4.8.2",
-    "prettier": "^2.6.2"
+    "nx": "15.0.0-beta.1",
+    "prettier": "^2.6.2",
+    "typescript": "~4.8.2"
   }
 }
