--- a/old/libs/postprocessing/project.json
+++ b/old/libs/postprocessing/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "old-libs-postprocessing",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "src",
@@ -6,9 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": [
-        "dist/libs/postprocessing"
-      ],
+      "outputs": ["dist/libs/postprocessing"],
       "options": {
         "project": "libs/postprocessing/ng-package.json",
         "updateBuildableProjectDepsInPackageJson": false
@@ -25,9 +24,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/postprocessing"
-      ],
+      "outputs": ["coverage/libs/postprocessing"],
       "options": {
         "jestConfig": "libs/postprocessing/jest.config.ts",
         "passWithNoTests": true
@@ -52,7 +49,5 @@
       }
     }
   },
-  "tags": [
-    "scope:postprocessing"
-  ]
+  "tags": ["scope:postprocessing"]
 }
