--- a/old/libs/soba/project.json
+++ b/old/libs/soba/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "old-libs-soba",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "src",
@@ -6,9 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": [
-        "dist/libs/soba"
-      ],
+      "outputs": ["dist/libs/soba"],
       "options": {
         "project": "libs/soba/ng-package.json",
         "updateBuildableProjectDepsInPackageJson": false
@@ -25,9 +24,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/soba"
-      ],
+      "outputs": ["coverage/libs/soba"],
       "options": {
         "jestConfig": "libs/soba/jest.config.ts",
         "passWithNoTests": true
@@ -83,9 +80,7 @@
     },
     "build-storybook": {
       "executor": "@storybook/angular:build-storybook",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputDir": "libs/documentations/build/soba",
         "configDir": "libs/soba/.storybook",
@@ -99,7 +94,5 @@
       }
     }
   },
-  "tags": [
-    "scope:soba"
-  ]
+  "tags": ["scope:soba"]
 }
