--- a/old/apps/sandbox/project.json
+++ b/old/apps/sandbox/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "old-apps-sandbox",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "src",
