--- a/old/apps/schematics-e2e/project.json
+++ b/old/apps/schematics-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "old-apps-schematics-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "../schematics-e2e/src",
@@ -11,8 +12,5 @@
       }
     }
   },
-  "tags": [],
-  "implicitDependencies": [
-    "schematics"
-  ]
+  "tags": []
 }
