--- a/old/libs/cannon/project.json
+++ b/old/libs/cannon/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "old-libs-cannon",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "src",
@@ -6,9 +7,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": [
-        "dist/libs/cannon"
-      ],
+      "outputs": ["dist/libs/cannon"],
       "options": {
         "project": "libs/cannon/ng-package.json",
         "updateBuildableProjectDepsInPackageJson": false
@@ -25,9 +24,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/cannon"
-      ],
+      "outputs": ["coverage/libs/cannon"],
       "options": {
         "jestConfig": "libs/cannon/jest.config.ts",
         "passWithNoTests": true
@@ -36,10 +33,7 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": [
-          "libs/cannon/src/**/*.ts",
-          "libs/cannon/src/**/*.html"
-        ]
+        "lintFilePatterns": ["libs/cannon/src/**/*.ts", "libs/cannon/src/**/*.html"]
       }
     },
     "publish": {
@@ -50,7 +44,5 @@
       }
     }
   },
-  "tags": [
-    "scope:cannon"
-  ]
+  "tags": ["scope:cannon"]
 }
