--- a/package.json
+++ b/package.json
@@ -5,15 +5,55 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
   "devDependencies": {
+    "@angular-devkit/build-angular": "~15.0.0-next.4",
+    "@angular-eslint/eslint-plugin": "~14.0.4",
+    "@angular-eslint/eslint-plugin-template": "~14.0.4",
+    "@angular-eslint/template-parser": "~14.0.4",
+    "@angular/cli": "~15.0.0-next.4",
+    "@angular/compiler-cli": "~15.0.0-next.5",
+    "@angular/language-service": "~15.0.0-next.5",
     "@nrwl/angular": "15.0.0-beta.1",
     "@nrwl/cli": "15.0.0-beta.1",
+    "@nrwl/eslint-plugin-nx": "15.0.0-beta.1",
+    "@nrwl/jest": "15.0.0-beta.1",
+    "@nrwl/linter": "15.0.0-beta.1",
     "@nrwl/workspace": "15.0.0-beta.1",
+    "@types/jest": "28.1.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "~5.39.0",
+    "@typescript-eslint/parser": "~5.39.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
+    "jest-preset-angular": "~12.2.2",
+    "ng-packagr": "~15.0.0-next.3",
     "nx": "15.0.0-beta.1",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "ts-jest": "28.0.5",
+    "ts-node": "10.9.1",
     "typescript": "~4.8.2"
+  },
+  "dependencies": {
+    "@angular/animations": "~15.0.0-next.5",
+    "@angular/common": "~15.0.0-next.5",
+    "@angular/compiler": "~15.0.0-next.5",
+    "@angular/core": "~15.0.0-next.5",
+    "@angular/forms": "~15.0.0-next.5",
+    "@angular/platform-browser": "~15.0.0-next.5",
+    "@angular/platform-browser-dynamic": "~15.0.0-next.5",
+    "@angular/router": "~15.0.0-next.5",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   }
 }
