chore: add store

--- a/libs/core/.eslintrc.json
+++ b/libs/core/.eslintrc.json
@@ -9,22 +9,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "new",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "new",
-            "style": "kebab-case"
-          }
-        ]
+        "@typescript-eslint/no-non-null-assertion": 0
       }
     },
     {
