--- a/libs/core/.eslintrc.json
+++ b/libs/core/.eslintrc.json
@@ -9,7 +9,12 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@typescript-eslint/no-non-null-assertion": 0
+        "@angular-eslint/component-selector": 0,
+        "@angular-eslint/component-class-suffix": 0,
+        "@angular-eslint/no-host-metadata-property": 0,
+        "@angular-eslint/directive-selector": 0,
+        "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/ban-types": 0
       }
     },
     {
