chore: upgrade angular

--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.0-next.4",
-    "@angular-eslint/eslint-plugin": "~14.0.4",
-    "@angular-eslint/eslint-plugin-template": "~14.0.4",
-    "@angular-eslint/template-parser": "~14.0.4",
-    "@angular/cli": "~15.0.0-next.4",
-    "@angular/compiler-cli": "~15.0.0-next.5",
-    "@angular/language-service": "~15.0.0-next.5",
+    "@angular-devkit/build-angular": "~15.0.0-rc.1",
+    "@angular-eslint/eslint-plugin": "~14.1.2",
+    "@angular-eslint/eslint-plugin-template": "~14.1.2",
+    "@angular-eslint/template-parser": "~14.1.2",
+    "@angular/cli": "~15.0.0-rc.1",
+    "@angular/compiler-cli": "~15.0.0-rc.1",
+    "@angular/language-service": "~15.0.0-rc.1",
     "@hirez_io/observer-spy": "2.2.0",
     "@nrwl/angular": "15.0.4",
     "@nrwl/cli": "15.0.4",
@@ -27,37 +27,36 @@
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "0.144.0",
-    "@typescript-eslint/eslint-plugin": "~5.39.0",
-    "@typescript-eslint/parser": "~5.39.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "~5.41.0",
+    "@typescript-eslint/parser": "~5.41.0",
+    "eslint": "~8.26.0",
+    "eslint-config-prettier": "8.5.0",
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "ng-packagr": "~15.0.0-next.3",
     "nx": "15.0.4",
-    "postcss": "^8.4.5",
-    "postcss-import": "~14.1.0",
-    "postcss-preset-env": "~7.5.0",
+    "postcss": "^8.4.18",
+    "postcss-import": "~15.0.0",
+    "postcss-preset-env": "~7.8.2",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.4"
   },
   "dependencies": {
-    "@angular/animations": "~15.0.0-next.5",
-    "@angular/common": "~15.0.0-next.5",
-    "@angular/compiler": "~15.0.0-next.5",
-    "@angular/core": "~15.0.0-next.5",
-    "@angular/forms": "~15.0.0-next.5",
-    "@angular/platform-browser": "~15.0.0-next.5",
-    "@angular/platform-browser-dynamic": "~15.0.0-next.5",
-    "@angular/router": "~15.0.0-next.5",
-    "rxjs": "~7.5.0",
-    "three": "0.145.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~15.0.0-rc.1",
+    "@angular/common": "~15.0.0-rc.1",
+    "@angular/compiler": "~15.0.0-rc.1",
+    "@angular/core": "~15.0.0-rc.1",
+    "@angular/forms": "~15.0.0-rc.1",
+    "@angular/platform-browser": "~15.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "~15.0.0-rc.1",
+    "@angular/router": "~15.0.0-rc.1",
+    "rxjs": "~7.5.7",
+    "three": "0.146.0",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8"
   }
 }
-
