chore: add schematics

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,11 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
     }
   ]
 }
