--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,8 @@
       "@angular-three/core": ["libs/core/src/index.ts"],
       "@angular-three/core/geometries": ["libs/core/geometries/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
-      "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"]
+      "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
+      "@angular-three/schematics": ["libs/schematics/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
