--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": "./",
     "paths": {
       "@angular-three/core": ["libs/core/src/index.ts"],
+      "@angular-three/core/attributes": ["libs/core/attributes/src/index.ts"],
       "@angular-three/core/geometries": ["libs/core/geometries/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
       "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
