--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,7 @@
       "@angular-three/core/cameras": ["libs/core/cameras/src/index.ts"],
       "@angular-three/core/curves": ["libs/core/curves/src/index.ts"],
       "@angular-three/core/geometries": ["libs/core/geometries/src/index.ts"],
+      "@angular-three/core/helpers": ["libs/core/helpers/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
       "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
       "@angular-three/schematics": ["libs/schematics/src/index.ts"]
