--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,7 @@
       "@angular-three/core/lights": ["libs/core/lights/src/index.ts"],
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
       "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
+      "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
       "@angular-three/schematics": ["libs/schematics/src/index.ts"]
     }
   },
