--- a/apps/sandbox/.eslintrc.json
+++ b/apps/sandbox/.eslintrc.json
@@ -10,7 +10,10 @@
       ],
       "rules": {
         "@angular-eslint/directive-selector": 0,
-        "@angular-eslint/component-selector": 0
+        "@angular-eslint/directive-class-suffix": 0,
+        "@angular-eslint/component-selector": 0,
+        "@angular-eslint/component-class-suffix": 0,
+        "@typescript-eslint/no-empty-function": 0
       }
     },
     {
