--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "@angular/compiler-cli": "~15.0.0-rc.1",
     "@angular/language-service": "~15.0.0-rc.1",
     "@hirez_io/observer-spy": "2.2.0",
-    "@nrwl/angular": "15.0.4",
-    "@nrwl/cli": "15.0.4",
-    "@nrwl/devkit": "15.0.4",
-    "@nrwl/eslint-plugin-nx": "15.0.4",
-    "@nrwl/jest": "15.0.4",
-    "@nrwl/js": "15.0.4",
-    "@nrwl/linter": "15.0.4",
-    "@nrwl/nx-plugin": "15.0.4",
-    "@nrwl/workspace": "15.0.4",
-    "@swc-node/register": "^1.4.2",
-    "@swc/cli": "~0.1.55",
-    "@swc/core": "^1.2.173",
+    "@nrwl/angular": "15.0.5",
+    "@nrwl/cli": "15.0.5",
+    "@nrwl/devkit": "15.0.5",
+    "@nrwl/eslint-plugin-nx": "15.0.5",
+    "@nrwl/jest": "15.0.5",
+    "@nrwl/js": "15.0.5",
+    "@nrwl/linter": "15.0.5",
+    "@nrwl/nx-plugin": "15.0.5",
+    "@nrwl/workspace": "15.0.5",
+    "@swc-node/register": "^1.5.4",
+    "@swc/cli": "~0.1.57",
+    "@swc/core": "^1.3.11",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "0.144.0",
-    "@typescript-eslint/eslint-plugin": "~5.41.0",
-    "@typescript-eslint/parser": "~5.41.0",
+    "@typescript-eslint/eslint-plugin": "~5.42.0",
+    "@typescript-eslint/parser": "~5.42.0",
     "eslint": "~8.26.0",
     "eslint-config-prettier": "8.5.0",
     "jest": "28.1.1",
@@ -42,7 +42,7 @@
     "jest-preset-angular": "~12.2.2",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~15.0.0-next.3",
-    "nx": "15.0.4",
+    "nx": "15.0.5",
     "postcss": "^8.4.18",
     "postcss-import": "~15.0.0",
     "postcss-preset-env": "~7.8.2",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@angular/animations": "~15.0.0-rc.1",
+    "@angular/cdk": "~15.0.0-rc.0",
     "@angular/common": "~15.0.0-rc.1",
     "@angular/compiler": "~15.0.0-rc.1",
     "@angular/core": "~15.0.0-rc.1",
@@ -61,10 +62,10 @@
     "@angular/platform-browser": "~15.0.0-rc.1",
     "@angular/platform-browser-dynamic": "~15.0.0-rc.1",
     "@angular/router": "~15.0.0-rc.1",
-    "@swc/helpers": "~0.4.11",
+    "@swc/helpers": "~0.4.12",
     "rxjs": "~7.5.7",
     "three": "0.146.0",
-    "tslib": "^2.4.0",
+    "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
   }
 }
