--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
       "@angular-three/core/materials": ["libs/core/materials/src/index.ts"],
       "@angular-three/core/meshes": ["libs/core/meshes/src/index.ts"],
       "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
+      "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
       "@angular-three/schematics": ["libs/schematics/src/index.ts"]
     }
   },
