--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~15.0.0-next.3",
+    "ng-packagr": "~14.2.0",
     "nx": "15.0.5",
     "postcss": "^8.4.18",
     "postcss-import": "~15.0.0",
@@ -74,6 +74,8 @@
     "@swc/helpers": "~0.4.12",
     "rxjs": "~7.5.7",
     "three": "0.146.0",
+    "three-stdlib": "^2.17.3",
+    "troika-three-text": "^0.46.4",
     "tslib": "^2.4.1",
     "zone.js": "~0.11.8"
   },
