--- a/libs/soba/.eslintrc.json
+++ b/libs/soba/.eslintrc.json
@@ -9,22 +9,16 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "type": "attribute",
-            "prefix": "angularThree",
-            "style": "camelCase"
-          }
-        ],
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "type": "element",
-            "prefix": "angular-three",
-            "style": "kebab-case"
-          }
-        ]
+        "@nrwl/nx/enforce-module-boundaries": 0,
+        "@angular-eslint/component-selector": 0,
+        "@angular-eslint/component-class-suffix": 0,
+        "@angular-eslint/directive-class-suffix": 0,
+        "@angular-eslint/no-host-metadata-property": 0,
+        "@angular-eslint/directive-selector": 0,
+        "@angular-eslint/no-output-native": 0,
+        "@typescript-eslint/no-non-null-assertion": 0,
+        "@typescript-eslint/ban-types": 0,
+        "@typescript-eslint/no-empty-function": 0
       }
     },
     {
