--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,7 +28,8 @@
       "@angular-three/core/stats": ["libs/core/stats/src/index.ts"],
       "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
       "@angular-three/schematics": ["libs/schematics/src/index.ts"],
-      "@angular-three/soba": ["libs/soba/src/index.ts"]
+      "@angular-three/soba": ["libs/soba/src/index.ts"],
+      "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
