--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,6 +29,7 @@
       "@angular-three/core/textures": ["libs/core/textures/src/index.ts"],
       "@angular-three/schematics": ["libs/schematics/src/index.ts"],
       "@angular-three/soba": ["libs/soba/src/index.ts"],
+      "@angular-three/soba/cameras": ["libs/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"],
       "@angular-three/soba/misc": ["libs/soba/misc/src/index.ts"]
     }
