chore: storybook for soba

--- a/libs/soba/project.json
+++ b/libs/soba/project.json
@@ -40,8 +40,39 @@
           "libs/soba/misc/**/*.ts",
           "libs/soba/misc/**/*.html",
           "libs/soba/cameras/**/*.ts",
-          "libs/soba/cameras/**/*.html"
+          "libs/soba/cameras/**/*.html",
+          "libs/soba/abstractions/**/*.ts",
+          "libs/soba/abstractions/**/*.html"
         ]
+      }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/soba/.storybook",
+        "browserTarget": "soba:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/soba",
+        "configDir": "libs/soba/.storybook",
+        "browserTarget": "soba:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
       }
     }
   },
