--- a/package.json
+++ b/package.json
@@ -20,20 +20,28 @@
     "@angular/compiler-cli": "~15.0.0-rc.1",
     "@angular/language-service": "~15.0.0-rc.1",
     "@hirez_io/observer-spy": "2.2.0",
-    "@nrwl/angular": "15.0.5",
-    "@nrwl/cli": "15.0.5",
-    "@nrwl/devkit": "15.0.5",
-    "@nrwl/eslint-plugin-nx": "15.0.5",
-    "@nrwl/jest": "15.0.5",
-    "@nrwl/js": "15.0.5",
-    "@nrwl/linter": "15.0.5",
-    "@nrwl/nx-plugin": "15.0.5",
-    "@nrwl/workspace": "15.0.5",
+    "@nrwl/angular": "15.0.8",
+    "@nrwl/cli": "15.0.8",
+    "@nrwl/devkit": "15.0.8",
+    "@nrwl/eslint-plugin-nx": "15.0.8",
+    "@nrwl/jest": "15.0.8",
+    "@nrwl/js": "15.0.8",
+    "@nrwl/linter": "15.0.8",
+    "@nrwl/nx-plugin": "15.0.8",
+    "@nrwl/storybook": "15.0.8",
+    "@nrwl/workspace": "15.0.8",
     "@release-it/bumper": "4.0.0",
     "@release-it/conventional-changelog": "5.1.1",
+    "@storybook/addon-essentials": "~6.5.13",
+    "@storybook/addons": "~6.5.13",
+    "@storybook/angular": "~6.5.13",
+    "@storybook/builder-webpack5": "~6.5.13",
+    "@storybook/core-server": "~6.5.13",
+    "@storybook/manager-webpack5": "~6.5.13",
+    "@storybook/theming": "~6.5.13",
     "@swc-node/register": "^1.5.4",
     "@swc/cli": "~0.1.57",
-    "@swc/core": "^1.3.11",
+    "@swc/core": "^1.3.14",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/three": "0.144.0",
@@ -49,8 +57,8 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.2",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "~14.2.0",
-    "nx": "15.0.5",
+    "ng-packagr": "~15.0.0-rc.0",
+    "nx": "15.0.8",
     "postcss": "^8.4.18",
     "postcss-import": "~15.0.0",
     "postcss-preset-env": "~7.8.2",
@@ -59,7 +67,8 @@
     "release-it": "15.5.0",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "webpack": "^5.74.0"
   },
   "dependencies": {
     "@angular/animations": "~15.0.0-rc.1",
