chore: instanced mesh

--- a/apps/sandbox/.eslintrc.json
+++ b/apps/sandbox/.eslintrc.json
@@ -13,7 +13,8 @@
         "@angular-eslint/directive-class-suffix": 0,
         "@angular-eslint/component-selector": 0,
         "@angular-eslint/component-class-suffix": 0,
-        "@typescript-eslint/no-empty-function": 0
+        "@typescript-eslint/no-empty-function": 0,
+        "@typescript-eslint/ban-ts-comment": 0
       }
     },
     {
