--- a/libs/soba/project.json
+++ b/libs/soba/project.json
@@ -44,7 +44,11 @@
           "libs/soba/abstractions/**/*.ts",
           "libs/soba/abstractions/**/*.html",
           "libs/soba/loaders/**/*.ts",
-          "libs/soba/loaders/**/*.html"
+          "libs/soba/loaders/**/*.html",
+          "libs/soba/shaders/**/*.ts",
+          "libs/soba/shaders/**/*.html",
+          "libs/soba/materials/**/*.ts",
+          "libs/soba/materials/**/*.html"
         ]
       }
     },
