--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,7 +36,9 @@
       "@angular-three/soba/cameras": ["libs/soba/cameras/src/index.ts"],
       "@angular-three/soba/controls": ["libs/soba/controls/src/index.ts"],
       "@angular-three/soba/loaders": ["libs/soba/loaders/src/index.ts"],
-      "@angular-three/soba/misc": ["libs/soba/misc/src/index.ts"]
+      "@angular-three/soba/materials": ["libs/soba/materials/src/index.ts"],
+      "@angular-three/soba/misc": ["libs/soba/misc/src/index.ts"],
+      "@angular-three/soba/shaders": ["libs/soba/shaders/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
